# shop

./: .gitignore  Cargo.toml  Config.example.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
scripts/: install-git-hooks.sh
src/: api.rs  config.rs  error.rs  lib.rs  main.rs  orchestrator.rs  security.rs  state.rs  storage.rs
tests/e2e/: Config.e2e.toml  docker-compose.yml  main.rs
tests/e2e/fixtures/: test-input.txt
tests/e2e/scripts/: task-processor.sh
