[package]
name = "shop"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
authors = ["Shop maintainers"]
description = "Config-driven API backend with spaces, tasks, uploads, and package orchestration"
license = "MIT"
repository = "https://github.com/melonask/shop"
readme = "README.md"

[[bin]]
name = "shop"
path = "src/main.rs"

[lib]
name = "shop"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
async-stream = "0.3.6"
axum = { version = "0.8.9", features = ["macros", "json", "form"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
base64 = "0.22.1"
bytes = "1.11.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
futures-util = "0.3.31"
hex = "0.4.3"
hmac = "0.13.0"
rand = "0.10.1"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.11.0"
thiserror = "2.0.12"
tokio = { version = "1.52.3", features = ["fs", "macros", "rt-multi-thread", "process", "signal", "time", "io-util", "sync"] }
tokio-stream = "0.1.17"
toml = "1.1.2"
tower-http = { version = "0.6.7", features = ["cors", "limit", "trace", "request-id"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.21.0", features = ["v4"] }
ulid = { version = "1.2.0", features = ["serde"] }

[dev-dependencies]
http-body-util = "0.1.3"
tempfile = "3.15.0"
tower = { version = "0.5.2", features = ["util"] }

[lints.rust]
unused_must_use = "deny"
